replace: {
  path: {
    origin: "cli"
  }
  val: {
    ascii_val: "!! IOS XR Configuration 7.8.1.19I\n"
"!! Last configuration change at Tue Jul 19 04:51:29 2022 by cafyauto\n"
"!\n"
"hostname R1\n"
"username cafyauto\n"
" group root-lr\n"
" group cisco-support\n"
" secret 10 $6$ymqNNgRK4bZ/N...$LI6ixV0OvuH.6RWHTE0z/FLVoZ3NPIoLedmrH0QJeBPce0Plu2qpulW.nThYDvOtdUGT5zM7NH4jmpjo0j0L00\n"
"!\n"
"grpc\n"
"!\n"
"vrf TE\n"
"!\n"
"vrf REPAIRED\n"
"!\n"
"line console\n"
" exec-timeout 0 0\n"
" absolute-timeout 0\n"
" session-timeout 0\n"
"!\n"
"line default\n"
" exec-timeout 0 0\n"
" absolute-timeout 0\n"
" session-timeout 0\n"
"!\n"

"call-home\n"
" service active\n"
" contact smart-licensing\n"
" profile CiscoTAC-1\n"
"  active\n"
"  destination transport-method email disable\n"
"  destination transport-method http\n"
" !\n"
"!\n"
"interface Loopback0\n"
" ipv4 address 1.1.1.1 255.255.255.255\n"
" ipv6 address ::1/128\n"
"!\n"
"interface MgmtEth0/RP0/CPU0/0\n"
" ipv4 address 5.3.24.90 255.255.0.0\n"
"!\n"
"interface MgmtEth0/RP1/CPU0/0\n"
" ipv4 address 5.3.24.90 255.255.0.0\n"
" shutdown\n"
"!\n"
"router static\n"
" address-family ipv4 unicast\n"
"  5.0.0.0/8 5.3.0.1\n"
"  223.0.0.0/8 5.3.0.1\n"
" !\n"        
"!\n"
"cef proactive-arp-nd enable\n"
"hw-module profile pbr vrf-redirect\n"
"ssh server v2\n"
"ssh server vrf default\n"
"end\n"
  }
}

